buttons: add support for tooltip
Tooltips must be set in the config file. Still, they're optional so
we have backwards compatibility with older config files.

Signed-off-by: Paulo Zanoni <pzanoni@mandriva.com>

--- a/buttons.conf
+++ b/buttons.conf
@@ -1,2 +1,2 @@
-ls^/usr/share/icons/tray_reboot/hibernate.png
-ls -l^/usr/share/icons/tray_reboot/suspend.png
+ls^/usr/share/icons/tray_reboot/hibernate.png^Hibernate
+ls -l^/usr/share/icons/tray_reboot/suspend.png^Suspend
